package controller;

public interface IEventShooter {

}
